--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 figs/
-ML/CNN.jl
 ML/CNN2.jl
 ML/VAE.jl
-ML/parseTimeSeries.jl
-ML/plots.jl
 models/
 data/
-statistics/
-preproc/
+preproc/patientToPathDictSec.jl
 src/
